--- a/Java_Web_Scraper/nbproject/project.properties
+++ b/Java_Web_Scraper/nbproject/project.properties
@@ -52,7 +52,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=amazon_scraper.Amazon_Scraper
+main.class=amazon_scraper.Main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
