--- a/Java_Web_Scraper/nbproject/project.properties
+++ b/Java_Web_Scraper/nbproject/project.properties
@@ -22,7 +22,7 @@ debug.test.classpath=\
     ${run.test.classpath}
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/Amazon_Scraper.jar
+dist.jar=${dist.dir}/Java_Web_Scraper.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 includes=**
