--- a/Java_Web_Scraper/build.xml
+++ b/Java_Web_Scraper/build.xml
@@ -7,8 +7,8 @@
 <!-- the Compile on Save feature is turned off for the project. -->
 <!-- You can turn off the Compile on Save (or Deploy on Save) setting -->
 <!-- in the project's Project Properties dialog box.-->
-<project name="Amazon_Scraper" default="default" basedir=".">
-    <description>Builds, tests, and runs the project Amazon_Scraper.</description>
+<project name="Java_Web_Scraper" default="default" basedir=".">
+    <description>Builds, tests, and runs the project Java_Web_Scraper.</description>
     <import file="nbproject/build-impl.xml"/>
     <!--
 
@@ -59,7 +59,7 @@
 
     An example of overriding the target for project execution could look like this:
 
-        <target name="run" depends="Amazon_Scraper-impl.jar">
+        <target name="run" depends="Java_Web_Scraper-impl.jar">
             <exec dir="bin" executable="launcher.exe">
                 <arg file="${dist.jar}"/>
             </exec>
